--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "nuxt": "^1.4.1",
+    "nuxt-i18n": "^2.9.1",
+    "vue-i18n": "^7.6.0",
     "vuetify": "^1.0.19"
   },
   "devDependencies": {
